force-app/main/default/objects/ServiceAppointment/fields/Asset_Name__c.field-meta.xml
<CustomField>
    <fullName>Asset_Name__c</fullName>
    <formula>SFS_Work_Order__r.Asset.Name</formula>
    <label>Asset Name</label>
    <type>Text</type>
</CustomField>