force-app/main/default/objects/ServiceAppointment/fields/Asset_Serial_Number__c.field-meta.xml
<CustomField>
    <fullName>Asset_Serial_Number__c</fullName>
    <formula>SFS_Work_Order__r.Asset.SerialNumber</formula>
    <label>Asset Serial Number</label>
    <type>Text</type>
</CustomField>