force-app/main/default/objects/ServiceAppointment/fields/Dispatch_Notes__c.field-meta.xml
<CustomField>
    <fullName>Dispatch_Notes__c</fullName>
    <formula>SFS_Work_Order__r.Location.Dispatch_Notes__c</formula>
    <label>Dispatch Notes</label>
    <type>Text</type>
</CustomField>