force-app/main/default/objects/ServiceAppointment/fields/Location_Name__c.field-meta.xml
<CustomField>
    <fullName>Location_Name__c</fullName>
    <formula>SFS_Work_Order__r.Location.Name</formula>
    <label>Location Name</label>
    <type>Text</type>
</CustomField>