force-app/main/default/objects/ServiceAppointment/fields/On_Call_Eligible__c.field-meta.xml
<CustomField>
    <fullName>On_Call_Eligible__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field denotes that the servicxe appointment is eligible to be scheduled to an On Call shift</description>
    <label>On Call Eligible</label>
    <type>Checkbox</type>
</CustomField>