force-app/main/default/objects/ServiceAppointment/fields/SFS_Asset__c.field-meta.xml
<CustomField>
    <fullName>SFS_Asset__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This field stores the Asset associated with the SA&apos;s parent record (Work Order)</description>
    <label>Asset</label>
    <referenceTo>Asset</referenceTo>
    <relationshipLabel>Service Appointments</relationshipLabel>
    <relationshipName>Service_Appointments</relationshipName>
    <type>Lookup</type>
</CustomField>