force-app/main/default/objects/ServiceAppointment/fields/SFS_Assigned_Service_Resource__c.field-meta.xml
<CustomField>
    <fullName>SFS_Assigned_Service_Resource__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This field stores the assigned resource when SA is scheduled</description>
    <label>DO NOT USE _Assigned Service Resource</label>
    <referenceTo>ServiceResource</referenceTo>
    <relationshipLabel>Service Appointments</relationshipLabel>
    <relationshipName>Service_Appointments</relationshipName>
    <type>Lookup</type>
</CustomField>