force-app/main/default/objects/ServiceAppointment/fields/SFS_Certification__c.field-meta.xml
<CustomField>
    <fullName>SFS_Certification__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This field is a lookup to the Certification record</description>
    <label>Certification</label>
    <referenceTo>SFS_Certification__c</referenceTo>
    <relationshipLabel>Service Appointments</relationshipLabel>
    <relationshipName>Service_Appointments</relationshipName>
    <type>Lookup</type>
</CustomField>