force-app/main/default/objects/ServiceAppointment/fields/SFS_Hold_Reason__c.field-meta.xml
<CustomField>
    <fullName>SFS_Hold_Reason__c</fullName>
    <label>Hold Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Access Issue</fullName>
            </value>
            <value>
                <fullName>Mod/Repair</fullName>
            </value>
            <value>
                <fullName>Safety/Power Outage</fullName>
            </value>
            <value>
                <fullName>Shutdown by AHJ</fullName>
            </value>
            <value>
                <fullName>Waiting on Assistance</fullName>
            </value>
            <value>
                <fullName>Waiting on Parts</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>