force-app/main/default/objects/ServiceAppointment/fields/SFS_Is_Multi_Day__c.field-meta.xml
<CustomField>
    <fullName>SFS_Is_Multi_Day__c</fullName>
    <description>Created as part of AD0-12129 to track if an appointment is multi day.</description>
    <formula>Duration &gt; 8</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>SFS Is Multi Day</label>
    <type>Checkbox</type>
</CustomField>