force-app/main/default/objects/ServiceAppointment/fields/SFS_Work_Order__c.field-meta.xml
<CustomField>
    <fullName>SFS_Work_Order__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This field stores the Work Order associated with the SA</description>
    <label>Work Order</label>
    <referenceTo>WorkOrder</referenceTo>
    <relationshipLabel>Service Appointments</relationshipLabel>
    <relationshipName>Service_Appointments</relationshipName>
    <type>Lookup</type>
</CustomField>