force-app/main/default/objects/ServiceAppointment/fields/Work_Order_Priority__c.field-meta.xml
<CustomField>
    <fullName>Work_Order_Priority__c</fullName>
    <formula>TEXT(SFS_Work_Order__r.Priority)</formula>
    <label>Work Order Priority</label>
    <type>Text</type>
</CustomField>