force-app/main/default/objects/ServiceAppointment/listViews/SFS_Service_Appointment_For_Technician.listView-meta.xml
<ListView>
    <fullName>SFS_Service_Appointment_For_Technician</fullName>
    <columns>SchedStartTime</columns>
    <columns>SchedEndTime</columns>
    <columns>FSL__GanttLabel__c</columns>
    <columns>WorkType</columns>
    <filterScope>Mine</filterScope>
    <label>SFS Service Appointment For Technician</label>
</ListView>